--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,5 @@ spring.datasource.minIdle=2
 spring.datasource.initialSize=5
 spring.datasource.removeAbandoned=true
 security.basic.enabled=false
+server.port=${PORT:5000}
 spring.thymeleaf.mode=HTML5
