--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,4 @@ spring.datasource.initialize=true
 security.basic.enabled=false
 server.port=${PORT:5000}
 spring.thymeleaf.mode=HTML5
+spring.jpa.hibernate.ddl-auto=create
