--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,5 +8,5 @@ spring.datasource.initialize=true
 security.basic.enabled=false
 server.port=${PORT:5000}
 spring.thymeleaf.mode=HTML5
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 security.enable-csrf=false
