--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,6 @@ spring.datasource.initialSize=5
 spring.datasource.initialize=true
 security.basic.enabled=false
 server.port=${PORT:5000}
-spring.thymeleaf.mode=HTML5
+spring.thymeleaf.mode=LEGACYHTML5
 spring.jpa.hibernate.ddl-auto=create
 security.enable-csrf=false
