changed thymeleaf version to latest

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,4 @@ security.basic.enabled=false
 server.port=${PORT:5000}
 spring.jpa.hibernate.ddl-auto=create
 security.enable-csrf=false
+spring.thymeleaf.mode=LEGACYHTML5
